@@ -8,7 +8,6 @@
 *.so
 *.pyc
 *.egg-info
-build
 
 # Packages #
 ############
