@@ -11,3 +11,4 @@
 2015-11-12	--	v0.3.4-stable	-- Minor changes
 
 2015-11-12	--	v0.3.5-stable	-- Change merge
+2015-11-12	--	v0.3.5a-stable	-- build tools update
